--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  background-color: #111;
+  color: #eee;
+}
+
 .active {
   @apply border-b pb-2;
 }
